[package]
name = "please-dont-escape"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/slowchop/please-dont-escape"
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]
name = "game"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_egui = "0.6"
nalgebra = "0.29.0"
pathfinding = "2.0"
rand = "*"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}
bevy = { version = "0.5" }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render"] }
bevy_webgl2 = "0.5"

# https://stackoverflow.com/questions/64507718/why-does-wasm-opt-fail-in-wasm-pack-builds-when-generating-a-function-returning
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ["-Oz", "--enable-mutable-globals"]
[target.'cfg(target_arch = "wasm32")'.profile.release]
debug = false
opt-level = 'z'
lto = true
